2005-10-27  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (compile_pattern)  Remove redundant
	escaping of metacharacters.
	Thanks to Roger Klorese.

2005-10-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_list_file_execute)  Pass the interface
	(hardcoded to "shell") as an argument to parse_part().

	* lib/Mj/Parser.pm:  (parse_part)  Accept the interface as
	an argument, to allow files executed by mj_trigger to be
	parsed as if they came from mj_shell.
	Thanks to Roger Klorese.

2005-08-31  Michael Yount <csf@moscow.com>

	* lib/Mj/SimpleDB/Text.pm:  (add)  If the key already exists,
	replace the data if "force" mode is used.
	Thanks to SRE.

2005-08-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (list_config_set)  Change the setting
	to the new value, not the default value, in "noforce" mode.
	Fixed by Richard Birkett.

2005-05-15  Michael Yount <csf@moscow.com>

	* lib/Mj/Deliver/Dest.pm:  (make_qqenvelope)  Support
	personalization under qmail.
	Implemented by John Levine.

	* lib/Mj/Deliver/QQEnvelope.pm:  (new, address, send)
	Support personalization under qmail.
	Implemented by John Levine.

2005-05-09  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_taboo_body)  The maximum line
	count should always be zero (unlimited) if an unlimited
	pattern is used.  Fixed by Richard Birkett.

2005-04-29  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  The "nomessage" mode requires
	an administrative password.

	* lib/Mj/CommandProps.pm:  Support the "nomessage" command mode.

	* lib/Mj/Parser.pm:  (parse_part)  Do not mail the results to
	the address specified by the "default user" command if the
	"nomessage" command mode is used.

2005-04-28  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_alias)  Make the target the canonical
	address rather than the aliased address.
	(who_chunk)  Use the target to find bookkeeping aliases.
	Thanks to John Levine.
